@@ -73,7 +73,11 @@ class Plugin extends EBPlugin
     val options = this.options.value
     val session_name = JEdit_Sessions.session_name(options)
     val session_base =
-      try { Sessions.session_base(options, session_name, JEdit_Sessions.session_dirs()) }
+      try {
+        Sessions.session_base(options, session_name,
+          dirs = JEdit_Sessions.session_dirs(),
+          all_known = Isabelle_System.getenv("JEDIT_ALL_KNOWN") == "true")
+      }
       catch { case ERROR(_) => Sessions.Base.pure(options) }
 
     _resources = new JEdit_Resources(session_base.platform_path)
